--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,44 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+.user-card {
+  display: flex;
+  flex-direction: column;
+  background: #747bff;
+  width: 350px;
+  border-radius: 8px;
+  padding: 12px 8px;
+  gap: 8px;
+}
+
+.user-card__avatar {
+  width: 120px;
+  height: 120px;
+  min-width: 120px;
+  border-radius: 8px;
+  border: 4px solid #f9f9f9;
+}
+
+.user-card__main-info {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  align-items: end;
+}
+
+.user-card__field {
+  display: flex;
+  width: 100%;
+  height: fit-content;
+  background: #f9f9f9;
+  border-radius: 6px;
+  padding: 8px 4px;
+  gap: 4px;
+}
+
+.user-card__field__title {
+  font-weight: bold;
 }
